@@ -1,4 +1,4 @@
-# LaTeXOptions strings=
+# LaTeXOptions strings for Italian
 0.LaTeXOptions.HelpText=
 1.LaTeXOptions.Title=Opzioni LaTeX (Writer2LaTeX)
 2.LaTeXOptions.FixedLine1.HelpText=
@@ -90,9 +90,9 @@
 88.LaTeXOptions.FloatOptionsLabel.HelpText=
 89.LaTeXOptions.FloatOptionsLabel.Label=Posizione float
 90.LaTeXOptions.FloatOptions.HelpText=
-132.FloatOptions.StringItemList=A inizio o fine pagine
+132.FloatOptions.StringItemList=A inizio o fine pagina
 133.FloatOptions.StringItemList=A inizio pagina
-134.FloatOptions.StringItemList=A fine pagine
+134.FloatOptions.StringItemList=A fine pagina
 135.FloatOptions.StringItemList=Qui o a inizio pagina
 136.FloatOptions.StringItemList=Qui o a fine pagina
 96.LaTeXOptions.AutoCorrectLabel.HelpText=
