@@ -1,4 +1,4 @@
-# Strings for Dialog Library W2XDialogs=
+# Strings for Dialog Library W2XDialogs in Italian
 0.XhtmlOptions.HelpText=
 1.XhtmlOptions.Title=Opzioni XHTML (Writer2xhtml)
 2.XhtmlOptions.StyleLabel.HelpText=
@@ -125,7 +125,7 @@
 135.Config.StringItemList=Acciaioso
 136.Config.StringItemList=Svizzero
 137.Config.StringItemList=Tradizionale
-138.Config.StringItemList=Ultramarino
+138.Config.StringItemList=Ultramarine
 139.Config.StringItemList=Personalizzato
 140.Config.StringItemList=Formattazione originale
 141.Config.StringItemList=Personalizzato
