@@ -1,0 +1,131 @@
+# Strings for Dialog Library W2XDialogs=Polish (Polski)
+0.XhtmlOptions.HelpText=
+1.XhtmlOptions.Title=Opcje XHTML (Writer2xhtml)
+2.XhtmlOptions.StyleLabel.HelpText=
+3.XhtmlOptions.StyleLabel.Label=Styl
+4.XhtmlOptions.ConfigLabel.HelpText=
+5.XhtmlOptions.ConfigLabel.Label=U\u017cyj stylu
+6.XhtmlOptions.Config.HelpText=
+17.XhtmlOptions.ScalingLabel.HelpText=
+18.XhtmlOptions.ScalingLabel.Label=Skalowanie
+19.XhtmlOptions.Scaling.HelpText=
+20.XhtmlOptions.ScalingPercentLabel.HelpText=
+21.XhtmlOptions.ScalingPercentLabel.Label=%
+22.XhtmlOptions.ColumnScalingLabel.HelpText=
+23.XhtmlOptions.ColumnScalingLabel.Label=Skalowanie kolumny
+24.XhtmlOptions.ColumnScaling.HelpText=
+25.XhtmlOptions.ColumnScalingPercentLabel.HelpText=
+26.XhtmlOptions.ColumnScalingPercentLabel.Label=%
+27.XhtmlOptions.ConvertToPx.HelpText=
+28.XhtmlOptions.ConvertToPx.Label=Skonwertuj jednostki do pikseli 
+29.XhtmlOptions.OriginalImageSize.HelpText=
+30.XhtmlOptions.OriginalImageSize.Label=U\u017cyj oryginalnych rozmiar\u00f3w rysunk\u00f3w
+31.XhtmlOptions.SpecialContentLabel.HelpText=
+32.XhtmlOptions.SpecialContentLabel.Label=Zawarto\u015b\u0107 specjalna
+33.XhtmlOptions.Notes.HelpText=
+34.XhtmlOptions.Notes.Label=Eksportuj notatki
+35.XhtmlOptions.UseDublinCore.HelpText=
+36.XhtmlOptions.UseDublinCore.Label=Eksportuj w\u0142a\u015bciwo\u015bci dokumentu (metadane)
+37.XhtmlOptions.AutoCorrectLabel.HelpText=
+38.XhtmlOptions.AutoCorrectLabel.Label=Automatyczna korekcja
+39.XhtmlOptions.IgnoreHardLineBreaks.HelpText=
+40.XhtmlOptions.IgnoreHardLineBreaks.Label=Ignoruj twarde \u0142amania linii
+41.XhtmlOptions.IgnoreEmptyParagraphs.HelpText=
+42.XhtmlOptions.IgnoreEmptyParagraphs.Label=Ignoruj puste paragrafy
+43.XhtmlOptions.IgnoreDoubleSpaces.HelpText=
+44.XhtmlOptions.IgnoreDoubleSpaces.Label=Ignoruj podw\u00f3jne odst\u0119py
+45.XhtmlOptions.FilesLabel.HelpText=
+46.XhtmlOptions.FilesLabel.Label=Pliki
+47.XhtmlOptions.Split.HelpText=
+48.XhtmlOptions.Split.Label=Podziel dokument w miejscu nag\u0142\u00f3wk\u00f3w
+49.XhtmlOptions.SplitLevelLabel.HelpText=
+50.XhtmlOptions.SplitLevelLabel.Label=Poziom nag\u0142\u00f3wk\u00f3w
+51.XhtmlOptions.SplitLevel.HelpText=
+52.SplitLevel.StringItemList=1
+53.SplitLevel.StringItemList=2
+54.SplitLevel.StringItemList=3
+55.SplitLevel.StringItemList=4
+56.SplitLevel.StringItemList=5
+57.SplitLevel.StringItemList=6
+58.XhtmlOptions.RepeatLevelsLabel.HelpText=
+59.XhtmlOptions.RepeatLevelsLabel.Label=Powt\u00f3rz poziomy nag\u0142\u00f3wk\u00f3w
+60.XhtmlOptions.RepeatLevels.HelpText=
+61.RepeatLevels.StringItemList=0
+62.RepeatLevels.StringItemList=1
+63.RepeatLevels.StringItemList=2
+64.RepeatLevels.StringItemList=3
+65.RepeatLevels.StringItemList=4
+66.RepeatLevels.StringItemList=5
+67.XhtmlOptions.SaveImagesInSubdir.HelpText=
+68.XhtmlOptions.SaveImagesInSubdir.Label=Zapisz rysunki w podkatalogu
+69.XhtmlOptions.XsltPathLabel.HelpText=
+70.XhtmlOptions.XsltPathLabel.Label=\u015acie\u017cka XSLT
+71.XhtmlOptions.XsltPath.HelpText=
+72.XhtmlOptions.XsltPath.Text=
+73.XhtmlOptions.ExportButton.HelpText=
+74.XhtmlOptions.ExportButton.Label=Eksportuj notatki
+75.XhtmlOptions.CancelButton.HelpText=
+76.XhtmlOptions.CancelButton.Label=Anuluj
+77.XhtmlOptionsCalc.HelpText=
+78.XhtmlOptionsCalc.Title=Opcje XHTML (Calc2xhtml)
+79.XhtmlOptionsCalc.StyleLabel.HelpText=
+80.XhtmlOptionsCalc.StyleLabel.Label=Styl
+81.XhtmlOptionsCalc.ConfigLabel.HelpText=
+82.XhtmlOptionsCalc.ConfigLabel.Label=U\u017cyj stylu
+83.XhtmlOptionsCalc.Config.HelpText=
+86.XhtmlOptionsCalc.ScalingLabel.HelpText=
+87.XhtmlOptionsCalc.ScalingLabel.Label=Skalowanie
+88.XhtmlOptionsCalc.Scaling.HelpText=
+89.XhtmlOptionsCalc.ScalingPercentLabel.HelpText=
+90.XhtmlOptionsCalc.ScalingPercentLabel.Label=%
+91.XhtmlOptionsCalc.ColumnScalingLabel.HelpText=
+92.XhtmlOptionsCalc.ColumnScalingLabel.Label=Skalowanie kolumny
+93.XhtmlOptionsCalc.ColumnScaling.HelpText=
+94.XhtmlOptionsCalc.ColumnScalingPercentLabel.HelpText=
+95.XhtmlOptionsCalc.ColumnScalingPercentLabel.Label=%
+96.XhtmlOptionsCalc.ConvertToPx.HelpText=
+97.XhtmlOptionsCalc.ConvertToPx.Label=Skonwertuj jednostki do pikseli 
+98.XhtmlOptionsCalc.OriginalImageSize.HelpText=
+99.XhtmlOptionsCalc.OriginalImageSize.Label=U\u017cyj oryginalnych rozmiar\u00f3w rysunk\u00f3w
+100.XhtmlOptionsCalc.SpecialContentLabel.HelpText=
+101.XhtmlOptionsCalc.SpecialContentLabel.Label=Zawarto\u015b\u0107 specjalna
+102.XhtmlOptionsCalc.Notes.HelpText=
+103.XhtmlOptionsCalc.Notes.Label=Eksportuj notatki
+104.XhtmlOptionsCalc.UseDublinCore.HelpText=
+105.XhtmlOptionsCalc.UseDublinCore.Label=Eksportuj w\u0142a\u015bciwo\u015bci dokumentu (metadane)
+106.XhtmlOptionsCalc.SheetsLabel.HelpText=
+107.XhtmlOptionsCalc.SheetsLabel.Label=Arkusze
+108.XhtmlOptionsCalc.DisplayHiddenSheets.HelpText=
+109.XhtmlOptionsCalc.DisplayHiddenSheets.Label=Wy\u015bwietl ukryte arkusze
+110.XhtmlOptionsCalc.DisplayHiddenRowsCols.HelpText=
+111.XhtmlOptionsCalc.DisplayHiddenRowsCols.Label=Wy\u015bwietl ukryte wiersze i kolumny
+112.XhtmlOptionsCalc.DisplayFilteredRowsCols.HelpText=
+113.XhtmlOptionsCalc.DisplayFilteredRowsCols.Label=Wy\u015bwietl filtrowane wiersze i kolumy
+114.XhtmlOptionsCalc.ApplyPrintRanges.HelpText=
+115.XhtmlOptionsCalc.ApplyPrintRanges.Label=Zastosuj zakres wydruku
+116.XhtmlOptionsCalc.UseTitleAsHeading.HelpText=
+117.XhtmlOptionsCalc.UseTitleAsHeading.Label=U\u017cyj tytu\u0142u jako nag\u0142\u00f3wka
+118.XhtmlOptionsCalc.UseSheetNamesAsHeadings.HelpText=Tekst
+119.XhtmlOptionsCalc.UseSheetNamesAsHeadings.Label=U\u017cyj nazw arkuszy jako nag\u0142\u00f3wk\u00f3w
+120.XhtmlOptionsCalc.FilesLabel.HelpText=
+121.XhtmlOptionsCalc.FilesLabel.Label=Pliki
+122.XhtmlOptionsCalc.CalcSplit.HelpText=
+123.XhtmlOptionsCalc.CalcSplit.Label=Zapisz arkusze jako oddzielne pliki
+124.XhtmlOptionsCalc.SaveImagesInSubdir.HelpText=
+125.XhtmlOptionsCalc.SaveImagesInSubdir.Label=Zapisz rysunki w podkatalogu
+126.XhtmlOptionsCalc.ExportButton.HelpText=
+127.XhtmlOptionsCalc.ExportButton.Label=Eksportuj
+128.XhtmlOptionsCalc.CancelButton.HelpText=
+129.XhtmlOptionsCalc.CancelButton.Label=Anuluj
+130.Config.StringItemList=Formatowanie oryginalne
+131.Config.StringItemList=Czekolada
+132.Config.StringItemList=P\u00f3\u0142noc
+133.Config.StringItemList=Modernistyczne
+134.Config.StringItemList=W starym stylu
+135.Config.StringItemList=Stalowe
+136.Config.StringItemList=Szwajcarskie
+137.Config.StringItemList=Tradycyjne
+138.Config.StringItemList=Ultramaryna
+139.Config.StringItemList=U\u017cytkownika
+140.Config.StringItemList=Formatowanie oryginalne
+141.Config.StringItemList=U\u017cytkownika
