@@ -1,0 +1,1 @@
+Writer2xhtml dostarcza filtrów eksportu programów Writer i Calc do XHTMLa oraz XHTML+MathML
